fixing overflow content

--- a/src/components/article-description/article-description.scss
+++ b/src/components/article-description/article-description.scss
@@ -20,6 +20,7 @@
 
 .tag {
   min-width: 38px;
+  max-width: 85%;
   min-height: 20px;
   font-size: $font-size-small;
   line-height: normal;
