--- a/src/components/article-form/article-form.scss
+++ b/src/components/article-form/article-form.scss
@@ -25,6 +25,8 @@
     line-height: 24px;
     color: rgba(0, 0, 0, 0.75);
     padding: 6px 13px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
 
