--- a/src/components/article-list/article-list.scss
+++ b/src/components/article-list/article-list.scss
@@ -11,11 +11,12 @@
 }
 
 .item {
-  height: 140px;
+  min-height: 140px;
   border-radius: 5px;
   background-color: #fff;
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.15);
   margin-bottom: 26px;
+  overflow: hidden;
 }
 
 .avatar {
