--- a/src/components/single-article/single-article.scss
+++ b/src/components/single-article/single-article.scss
@@ -5,6 +5,12 @@
   padding-top: 10px;
 }
 
+.card-body {
+  overflow-wrap: anywhere;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 /* .card-meta {
     width: 100%;
 } */
